testsuite/tests/shouldnt_typecheck/should_fail/BindConflictArgs.sf
let f (x:Int) (x:Int) = x in f